fix: create a background for quote text to improve readability

--- a/src/components/organisms/BannerQuote/styles.module.scss
+++ b/src/components/organisms/BannerQuote/styles.module.scss
@@ -33,6 +33,17 @@
     @include screen-size('desktop') {
       width: 41.7rem;
     }
+
+    @include screen-size('desktop-lg') {
+      width: 64rem;
+    }
+  }
+
+  &__text {
+    background-color: $light-gray;
+    opacity: 70%;
+    border-radius: 3rem 0;
+    padding: 1rem;
   }
 
   svg {
